Prepare for npm publish: @fellow/relay-dedup

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "relay-dedup",
+  "name": "@fellow/relay-dedup",
   "version": "0.1.0",
   "description": "Deduplicate Relay-generated artifact files by extracting repeated structures into a shared module",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fellowapp/relay-dedup"
+    "url": "git+https://github.com/fellowapp/relay-dedup.git"
   },
   "bin": {
     "relay-dedup": "bin/relay-dedup"
